--- a/frontend/src/app/cmps/app-header/app-header.component.html
+++ b/frontend/src/app/cmps/app-header/app-header.component.html
@@ -2,8 +2,15 @@
     <div class="discount-alert" *ngIf="discount.isDiscount">{{discount.sumOfDiscount}}% off everything! Hurry up!</div>
     <div class="buttons-logo-container grid">
         <div routerLink="/" class="logo flex center">Manook</div>
-        <button routerLink="clothing-item" class="women-btn">Women</button>
-        <button routerLink="clothing-item" class="men-btn">Men</button>
+        <button 
+        routerLink="clothing-item"
+         class="women-btn"
+         name="women"
+        (click)="onSetGender('women')">Women</button>
+        <button routerLink="clothing-item"
+         class="men-btn"
+        (click)="onSetGender('men')"
+         name="men">Men</button>
         <form class="flex align-center">
             <input type="text"
              [(ngModel)]="filterBy.name"
