Create basic structure to clothing item details page

--- a/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.html
+++ b/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.html
@@ -1,1 +1,10 @@
-<p>clothing-item-details works!</p>
+<section class="clothing-item-details">
+    <img [src]="clothingItem.imgUrl" [alt]="clothingItem.name"/>
+    <h1>{{clothingItem.name}}</h1>
+    <h3>{{clothingItem.gender}}</h3>
+    <h3 *ngIf="clothingItem.quantity < 4">{{clothingItem.quantity}} left</h3>
+    <h3>Main style: {{clothingItem.styles[0]}}</h3>
+    <h3>{{clothingItem.type}}</h3>
+    <p>{{clothingItem.desc}}</p>
+    <h3>{{clothingItem.price}}</h3>
+</section>
