Make details btn route to clothing item details page

--- a/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
+++ b/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
@@ -7,7 +7,7 @@
         <span class="cart" (click)="onAddItemToCart(clothingItem)"></span>
         <span class="wishlist"></span>
         <span *ngIf="user && user.isAdmin" class="deletion"></span>
-        <span class="details"></span>
+        <span class="details" routerLink="{{ clothingItem._id }}"></span>
     </div>
 </article>
 
