Create a new function to emit wishlist event and connect it to relevant btn

--- a/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
+++ b/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
@@ -5,7 +5,7 @@
     <h3>${{clothingItem.price}}</h3>
     <div class="user-actions grid">
         <span class="cart" (click)="onAddItemToCart()"></span>
-        <span class="wishlist"></span>
+        <span class="wishlist" (click)="onAddItemToWishlist()"></span>
         <span *ngIf="user && user.isAdmin" class="deletion" (click)="onRemoveItem()"></span>
         <span class="details" routerLink="{{ clothingItem._id }}"></span>
     </div>
