--- a/frontend/src/app/pages/clothing-item-index/clothing-item-index.component.html
+++ b/frontend/src/app/pages/clothing-item-index/clothing-item-index.component.html
@@ -3,10 +3,12 @@
 [clothes]="clothes"
 [user]="user"
 (remove)="onRemoveClothingItem($event)"
-(addToCart)="OnAddItemToCart($event)"></clothing-item-list>
+(addToCart)="OnAddItemToCart($event)"
+(wishlist)="onAddItemToWishlist($event)">
+</clothing-item-list>
 </section>
 
 <div class="disconnected-user" *ngIf="disconnectedUserClicked">
     <button (click)="onCloseMsg()">x</button>
-    <p>Please login to your user or create an account to add items to your cart.</p>
+    <p>Please login to your user or create an account to do this action.</p>
 </div>
