Add filter component to clothing item index structure

--- a/frontend/src/app/pages/clothing-item-index/clothing-item-index.component.html
+++ b/frontend/src/app/pages/clothing-item-index/clothing-item-index.component.html
@@ -1,4 +1,5 @@
-<section class="clothing-item-index grid">
+<section class="clothing-item-index">
+<clothing-item-filter></clothing-item-filter>
 <clothing-item-list 
 [clothes]="clothes"
 [user]="user"
