--- a/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.html
+++ b/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.html
@@ -1,10 +1,13 @@
 <section class="clothing-item-filter grid">
-<div class="preferred-styles">
-    <dynamic-style-input 
-    *ngFor="let style of styles; trackBy: trackByFn"
-    [filterBy]="filterBy"
-    [style]="style"
-    (select)="onSetStyle($event)">
-</dynamic-style-input>
-</div>
+    <div class="styles-selection grid">
+        <dynamic-style-input *ngFor="let style of styles; trackBy: trackByStyleFn" [filterBy]="filterBy" [style]="style"
+            (select)="onSetStyle($event)">
+        </dynamic-style-input>
+    </div>
+    <div class="type-selection">
+        <label>Type</label>
+        <select (change)="onSelectType($event)" name="clothing-item-type" id="clothing-item-type">
+            <option *ngFor="let type of types; trackBy: trackByTypeFn" [value]="type">{{type || 'choose'}}</option>
+        </select>
+    </div>
 </section>
