--- a/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.html
+++ b/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.html
@@ -10,4 +10,7 @@
             <option *ngFor="let type of types; trackBy: trackByTermFn" [value]="type">{{type || 'choose'}}</option>
         </select>
     </div>
+    <div class="range-selection">
+        <input type="range" min="0" max="1000" name="range" (change)="onChangeRange($event)" />
+    </div>
 </section>
