--- a/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.scss
+++ b/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.scss
@@ -1,4 +1,37 @@
-.styles-selection {
-    grid-template-columns: repeat(6, 1fr);
-    align-items: center;
+.clothing-item-filter {
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+
+    .styles-selection {
+        grid-column: 1 / -1;
+        grid-row: 1;
+        grid-template-columns: repeat(6, 1fr);
+    }
+
+    .type-selection {
+        grid-template-rows: 1fr;
+        grid-row: 2;
+        grid-column: 1;
+        justify-self: center;
+        gap: .5rem;
+
+        & > * {
+            grid-row: 1;
+        }
+
+        select {
+            text-transform: capitalize;
+        }
+
+    }
+
+    .range-selection {
+        grid-row: 2;
+        grid-column: 2;
+        align-self: center;
+
+        input {
+            width: 100%;
+        }
+    }
 }
