Move structure of diconnected user div from index page to component

--- a/frontend/src/app/cmps/disconnected-user/disconnected-user.component.html
+++ b/frontend/src/app/cmps/disconnected-user/disconnected-user.component.html
@@ -1,1 +1,4 @@
-<p>disconnected-user works!</p>
+<div class="disconnected-user">
+    <button (click)="onCloseMsg()">x</button>
+    <p>Please login to your user or create an account to do this action.</p>
+</div>
