--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -63,6 +63,7 @@
             border: none;
             cursor: pointer;
             z-index: 14;
+            font-family: fira-reg, Tahoma;
         }
 
         button:not(.close-btn) {
