Edit styling properties of component

--- a/frontend/src/app/cmps/disconnected-user/disconnected-user.component.scss
+++ b/frontend/src/app/cmps/disconnected-user/disconnected-user.component.scss
@@ -1,15 +1,16 @@
 .disconnected-user {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--white);
     padding: 1rem;
     border-radius: .5rem;
+    z-index: 12;
 
     button {
         position: absolute;
-        z-index: 5;
+        z-index: 15;
         top: 0;
         left: 6px;
         background-color: transparent;
