--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -5,6 +5,25 @@
     height: 100%;
     justify-content: space-evenly;
 
+    .close-btn {
+        position: absolute;
+        left: 6px;
+        top: 6px;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        z-index: 14;
+        font-family: fira-reg, Tahoma;
+    }
+
+    .user-login-signup, .user-wishlist {
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+        background-color: var(--white);
+        padding: 1rem;
+        border-radius: .5rem;
+        position: absolute;
+    }
+
     span::before {
         font-family: fa-solid;
         color: var(--primary-clr2);
@@ -40,31 +59,17 @@
 
     .user-login-signup {
         grid-auto-flow: row;
-        position: absolute;
         z-index: 10;
         top: 50vh;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: var(--white);
-        padding: 1rem;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-        border-radius: .5rem;
 
         input {
             @include input1;
             position: static;
         }
 
-        .close-btn {
-            position: absolute;
-            left: 6px;
-            top: 6px;
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            z-index: 14;
-            font-family: fira-reg, Tahoma;
-        }
+
 
         button:not(.close-btn) {
             @include buttons1;
@@ -109,9 +114,72 @@
         }
 
         .logged-in-user {
-            
+
             h1 {
                 margin-block-start: 8px;
+            }
+        }
+    }
+
+    .user-wishlist {
+        width: 200px;
+        height: 100vh;
+        position: fixed;
+        z-index: 20;
+        top: 0;
+        right: 0;
+
+        .close-btn {
+            top: 0px;
+        }
+
+        .no-items {
+            text-align: center;
+            align-self: center;
+        }
+
+        .wishlist-items {
+            padding-inline: .4rem;
+            grid-auto-flow: row;
+            gap: .5rem;
+            overflow: scroll;
+
+            .wishlist-item, .wishlist-item .remove {
+                background-color: #e8e8e8;
+            }
+
+            .wishlist-item {
+                grid-template-columns: repeat(2, 1fr);
+                height: 140px;
+
+                img {
+                    width: 100%;
+                    display: block;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+                .text {
+                    justify-content: space-between;
+                    height: 100%;
+
+                    & > * {
+                        text-align: center;
+                    }
+
+                    h2 {
+                        font-size: .8em;
+                    }
+
+                    p {
+                        font-size: .6em;
+                        font-family: fira-reg, Tahoma;
+                    }
+                }
+
+                button {
+                    @include buttons1;
+                }
             }
         }
     }
