--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -133,7 +133,7 @@
             top: 0px;
         }
 
-        .no-items {
+        .no-wishlist-items {
             text-align: center;
             align-self: center;
         }
