Add basic structure to cart div in login signup html file

--- a/frontend/src/app/cmps/login-signup/login-signup.component.html
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.html
@@ -21,7 +21,7 @@
     <span class="wishlist" (click)="onWishlistClick()"></span>
     <div class="user-wishlist grid" *ngIf="loggedInUser && sectionClicked === 'wishlist'">
         <button (click)="onCloseModal()" class="close-btn">x</button>
-        <div class="no-items" *ngIf="!loggedInUser.wishlist.length">No items added to wishlist.</div>
+        <div class="no-wishlist-items" *ngIf="!loggedInUser.wishlist.length">No items added to wishlist.</div>
         <ul *ngIf="loggedInUser.wishlist.length" class="wishlist-items grid">
             <li *ngFor="let item of loggedInUser!.wishlist" class="wishlist-item grid">
                 <img [src]="item.imgUrl || item.imgUrl[0]" [alt]="item.name" [title]="item.name" />
@@ -30,11 +30,24 @@
                     <p>${{item.price}}</p>
                     <button (click)="onRemoveItemFromWishlist(item._id)" class="remove">Remove</button>
                 </div>
-                
             </li>
         </ul>
     </div>
     <span class="cart"></span>
+    <div class="user-cart grid" *ngIf="loggedInUser && sectionClicked === 'cart'">
+        <ul class="cart-items grid">
+            <div class="no-cart-items" *ngIf="!loggedInUser.recentOrder">No items added to order.</div>
+            <li *ngFor="let item of loggedInUser.recentOrder!.selectedItems" class="cart-item">
+                <img [src]="item.imgUrl || item.imgUrl[0]" [alt]="item.name" [title]="item.name" />
+                <div class="text grid">
+                    <h2>{{item.name}}</h2>
+                    <p>${{item.price}}</p>
+                    <button (click)="onRemoveItemFromWishlist(item._id)" class="remove">Remove</button>
+                </div> 
+            </li>
+            <h1>Sum: {{loggedInUser.recentOrder!.sum}}</h1>
+        </ul>
+    </div> 
 </section>
 
 <disconnected-user *ngIf="disconnectedUserClicked" (close)="closeMsg($event)">
