--- a/frontend/src/app/pages/user-wishlist/user-wishlist.component.html
+++ b/frontend/src/app/pages/user-wishlist/user-wishlist.component.html
@@ -1,1 +1,14 @@
-<p>user-wishlist works!</p>
+<section class="user-wishlist" *ngIf="user">
+    <h1 class="wishlist-header">Wishlist</h1>
+    <div class="no-items" *ngIf="!user.wishlist.length">No items added to wishlist.</div>
+    <ul *ngIf="user.wishlist.length" class="wishlist-items grid">
+        <li *ngFor="let item of user!.wishlist" class="wishlist-item grid">
+            <img [src]="item.imgUrl || item.imgUrl[0]" [alt]="item.name" [title]="item.name" />
+            <div class="text grid">
+                <h2>{{item.name}}</h2>
+                <p>${{item.price}}</p>
+                <button (click)="onRemoveItemFromWishlist(item._id)" class="remove">Remove</button>
+            </div>
+        </li>
+    </ul>
+</section>
