--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -16,7 +16,8 @@
         font-family: fira-reg, Tahoma;
     }
 
-    .user-login-signup, .user-wishlist {
+    .user-login-signup,
+    .user-wishlist {
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
         background-color: var(--white);
         padding: 1rem;
@@ -121,40 +122,53 @@
         }
     }
 
-    .user-wishlist {
+    .user-wishlist,
+    .user-cart {
         width: 200px;
-        height: 100vh;
+        height: 100%;
         position: fixed;
         z-index: 20;
         top: 0;
         right: 0;
 
         .close-btn {
-            top: 0px;
+            top: 2px;
+            font-size: 1em;
         }
 
-        .no-wishlist-items {
+        .no-items {
             text-align: center;
-            align-self: center;
         }
+    }
+
+    .wishlist-header,
+    .cart-header {
+        text-align: center;
+        margin-block: 1rem;
+        font-family: fira-reg, Tahoma;
+    }
+
+    .user-wishlist {
 
         .wishlist-items {
-            padding-inline: .4rem;
             grid-auto-flow: row;
+            grid-template-rows: 120px;
             gap: .5rem;
-            overflow: scroll;
+            overflow-y: auto;
+            position: absolute;
 
-            .wishlist-item, .wishlist-item .remove {
+            .wishlist-item,
+            .wishlist-item .remove {
                 background-color: #e8e8e8;
             }
 
             .wishlist-item {
                 grid-template-columns: repeat(2, 1fr);
-                height: 140px;
+                height: 100%;
+                border-radius: 7px;
 
                 img {
                     width: 100%;
-                    display: block;
                     height: 100%;
                     object-fit: cover;
                 }
@@ -163,7 +177,7 @@
                     justify-content: space-between;
                     height: 100%;
 
-                    & > * {
+                    &>* {
                         text-align: center;
                     }
 
@@ -183,4 +197,80 @@
             }
         }
     }
+
+    .user-cart {
+
+        background-color: var(--white);
+
+        .cart-items {
+            grid-auto-flow: row;
+            grid-template-rows: 160px;
+            gap: .5rem;
+
+            .cart-item {
+
+                grid-template-columns: 120px 1fr;
+                height: 100%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    grid-column: 1;
+                }
+
+                .text {
+                    grid-column: 2;
+                    justify-content: space-between;
+                    height: 100%;
+
+
+                    &>* {
+                        text-align: center;
+                    }
+
+                    h2 {
+                        font-size: .8em;
+                    }
+
+                    p {
+                        font-size: .6em;
+                        font-family: fira-reg, Tahoma;
+                    }
+
+                    button {
+                        @include buttons2;
+                        height: max-content;
+                    }
+                }
+            }
+
+            .cart-summary {
+
+                button {
+                    @include buttons1;
+                    padding: .5rem;
+                }
+            }
+        }
+
+
+    }
 }
+
+// <div class="user-cart grid" *ngIf="loggedInUser && sectionClicked === 'cart'">         
+//     <button (click)="onCloseModal()" class="close-btn">x</button>
+//     <h1 class="cart-header">Cart</h1>           
+//     <div class="no-items" *ngIf="!loggedInUser.recentOrder">No items added to order.</div>
+//     <ul class="cart-items grid" *ngIf="loggedInUser.recentOrder && loggedInUser.recentOrder.selectedItems.length">
+//         <li *ngFor="let item of loggedInUser.recentOrder.selectedItems" class="cart-item">
+//             <img [src]="item.imgUrl || item.imgUrl[0]" [alt]="item.name" [title]="item.name" />
+//             <div class="text grid">
+//                 <h2>{{item.name}}</h2>
+//                 <p>${{item.price}}</p>
+//                 <button (click)="onRemoveItemFromWishlist(item._id)" class="remove">Remove</button>
+//             </div> 
+//         </li>
+//         <h1>Sum: {{loggedInUser.recentOrder!.sum}}</h1>
+//     </ul>
+// </div> 
