--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -1,10 +1,9 @@
 .home {
-    grid-template-columns: minmax(20px, 5%) 1fr minmax(20px, 5%);
+    grid-auto-flow: row;
     width: 100%;
 
     .layout-container {
         position: relative;
-        grid-column: 2;
 
         .home-pic {
             object-fit: contain;
