--- a/frontend/src/app/pages/user-wishlist/user-wishlist.component.html
+++ b/frontend/src/app/pages/user-wishlist/user-wishlist.component.html
@@ -7,7 +7,10 @@
             <div class="text grid">
                 <h2>{{item.name}}</h2>
                 <p>${{item.price}}</p>
-                <button (click)="onRemoveItemFromWishlist(item._id)" class="remove">Remove</button>
+            </div>          
+            <div class="user-actions grid">      
+            <button (click)="onRemoveItemFromWishlist(item._id)" class="remove">Remove</button>
+            <button (click)="onAddItemToCart(item)">Purchase</button>
             </div>
         </li>
     </ul>
