Edit functions names in structure of user wishlist cmp

--- a/frontend/src/app/pages/user-wishlist/user-wishlist.component.html
+++ b/frontend/src/app/pages/user-wishlist/user-wishlist.component.html
@@ -9,7 +9,7 @@
                 <p>${{item.price}}</p>
             </div>          
             <div class="user-actions grid">      
-            <button (click)="onRemoveItemFromWishlist(item._id)" class="remove">Remove</button>
+            <button (click)="onRemoveItemFromWishlist(item)" class="remove">Remove</button>
             <button (click)="onAddItemToCart(item)">Purchase</button>
             </div>
         </li>
