Edit styling properties of usr wishlist page cmp

--- a/frontend/src/app/pages/user-wishlist/user-wishlist.component.scss
+++ b/frontend/src/app/pages/user-wishlist/user-wishlist.component.scss
@@ -5,7 +5,7 @@
 
     h1 {
         font-size: 3em;
-        margin-block: 1.5em;
+        margin-block-end: 1.5em;
         text-align: center;
     }
 
