--- a/frontend/src/assets/style/setup/_mixins.scss
+++ b/frontend/src/assets/style/setup/_mixins.scss
@@ -25,6 +25,7 @@
     &:hover {
         background-color: #f5f5f5;
         border-bottom: var(--primary-clr1) 5px solid;
+        font-family: fira-reg, Tahoma;
     }
 
     &:active {
