--- a/frontend/src/app/pages/user-order/user-order.component.html
+++ b/frontend/src/app/pages/user-order/user-order.component.html
@@ -1,18 +1,24 @@
-    <div class="user-order">
-        <h1 class="cart-header">Cart</h1>
-        <div class="no-items" *ngIf="!loggedInUser.recentOrder">No items added to order.</div>
-        <ul class="cart-items grid" *ngIf="loggedInUser.recentOrder && loggedInUser.recentOrder.selectedItems.length">
-            <li *ngFor="let item of loggedInUser.recentOrder.selectedItems" class="cart-item grid">
-                <img [src]="item.imgUrl || item.imgUrl[0]" [alt]="item.name" [title]="item.name" />
-                <div class="text grid">
-                    <h2>{{item.name}}</h2>
-                    <p>${{item.price}}</p>
-                    <button (click)="onRemoveItemFromOrder(item)" class="remove">Remove</button>
+<div class="user-order">
+    <h1 class="order-header">Order</h1>
+    <div class="no-items" *ngIf="!loggedInUser.recentOrder">No items added to order.</div>
+    <ul class="order-items grid" *ngIf="loggedInUser.recentOrder && loggedInUser.recentOrder.selectedItems.length">
+        <li *ngFor="let item of loggedInUser.recentOrder.selectedItems" class="order-item grid">
+            <img [src]="item.imgUrl || item.imgUrl[0]" [alt]="item.name" [title]="item.name" />
+            <div class="text grid">
+                <h2>{{item.name}}</h2>
+                <p>${{item.price}} X {{item.quantity ? item.quantity : 1}}</p>
+                <p *ngIf="item.stock <= 4" class="item-stock">Only {{item.stock}} left</p>
+                <p class="item-type">{{item.type}}</p>
+                <p>{{item.desc}}</p>
+                <div class="user-actions grid">
+                    <span (click)="onRemoveItemFromOrder(item)" class="remove-btn"></span>
+                    <span class="details-btn" routerLink="{{ item._id }}"></span>
                 </div>
-            </li>
-            <div class="cart-summary">
-                <h1>Sum: {{loggedInUser.recentOrder!.sum}}</h1>
-                <button>Checkout</button>
             </div>
-        </ul>
+        </li>
+    </ul>
+    <div class="order-summary grid">
+        <h1>Sum: ${{loggedInUser.recentOrder!.sum}}</h1>
+        <button routerLink="payment">Checkout</button>
     </div>
+</div>
