--- a/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.html
+++ b/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.html
@@ -1,4 +1,4 @@
-<section class="clothing-item-details" *ngIf="clothingItem$ | async as clothingItem">
+<section class="clothing-item-details grid" *ngIf="clothingItem$ | async as clothingItem">
     <img [src]="clothingItem.imgUrl" [alt]="clothingItem.name"/>
     <h1>{{clothingItem.name}}</h1>
     <h3>{{clothingItem.gender}}</h3>
@@ -6,5 +6,5 @@
     <h3>Main style: {{clothingItem.style[0]}}</h3>
     <h3>{{clothingItem.type}}</h3>
     <p>{{clothingItem.desc}}</p>
-    <h3>{{clothingItem.price}}</h3>
+    <h3>${{clothingItem.price}}</h3>
 </section>
