Edit structure of clothing item details page component

--- a/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.html
+++ b/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.html
@@ -1,10 +1,10 @@
 <section class="clothing-item-details grid" *ngIf="clothingItem$ | async as clothingItem">
     <img [src]="clothingItem.imgUrl" [alt]="clothingItem.name"/>
     <h1>{{clothingItem.name}}</h1>
-    <h3>{{clothingItem.gender}}</h3>
+    <h3 class="gender">{{clothingItem.gender}}</h3>
     <h3 *ngIf="clothingItem.stock < 4">{{clothingItem.stock}} left</h3>
-    <h3>Main style: {{clothingItem.style[0]}}</h3>
-    <h3>{{clothingItem.type}}</h3>
+    <p class="style">Main style: <span>{{clothingItem.style[0]}}</span></p>
+    <p class="type">{{clothingItem.type}}</p>
     <p>{{clothingItem.desc}}</p>
-    <h3>${{clothingItem.price}}</h3>
+    <h3 class="price">${{clothingItem.price}}</h3>
 </section>
