Make image of each clothing item article to route to its details page component

--- a/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.html
+++ b/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.html
@@ -1,6 +1,6 @@
 <section class="home-clothing-item-preview grid">
     <article *ngFor="let clothingItem of clothes$ | async" class="clothing-item grid">
-        <img [src]="clothingItem.imgUrl || clothingItem.imgUrl[0]" [title]="clothingItem.name" />
+        <img routerLink="/clothing-item/{{clothingItem._id}}" [src]="clothingItem.imgUrl || clothingItem.imgUrl[0]" [title]="clothingItem.name" />
         <h1>{{clothingItem.name}}</h1>
         <p>{{clothingItem.desc}}</p>
     </article>
