--- a/frontend/src/app/cmps/app-footer/app-footer.component.html
+++ b/frontend/src/app/cmps/app-footer/app-footer.component.html
@@ -1,5 +1,5 @@
-<section class="footer grid">
-    <pre>
+<section class="footer">
+    <pre class="footer-info grid">
         <span class="logo-in-footer">Manook</span> Created by Shoval S. , <span class="github-icon" alt="github icon, clickable"></span>
     </pre>
 </section>
